--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 pyfuse3
--e git+https://github.com/RCOSDP/rdmclient.git#egg=osfclient
+osfclient @ git+https://github.com/RCOSDP/rdmclient.git
 cacheout
 aiofile
